--- a/src/components/Dashboard/dashboard.less
+++ b/src/components/Dashboard/dashboard.less
@@ -58,8 +58,24 @@
     justify-content: center;
 }
 .cartIcon{
-    font-size: 16px;
-    color: #6572b8
+    font-size: 17px;
+    color: #6572b8;
+    margin-left: 15px;
+    margin-right: 10px;
+}
+.ecommerce{
+    font-size: 20px;
+
+    color: #6572b8;
+    cursor: pointer;
+    font-family: lato;
+}
+.ecommerce1{
+    font-size: 15px;
+    color: #455a64;
+    font-weight: 400;
+    cursor: pointer;
+    font-family: lato;
 }
 .heading{
     font-size: 16px;
@@ -83,7 +99,8 @@
     color :white;
     font-size: small;
     size: small;
-    animation: bounce;
+    transition: transform 300ms ease-in-out;
+    // animation: bounce;
 
 }
 .alignment{
@@ -161,4 +178,16 @@
     flex-wrap: wrap;
     justify-content: space-between;
     // background-color: coral;
+}
+.expansion{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.expansion1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    // justify-content: space-between;
 }
