--- a/src/components/Product/product.less
+++ b/src/components/Product/product.less
@@ -125,9 +125,28 @@
     display: flex;
     justify-content: center;
 }
+.imgFoldershow{
+    padding : 5px;
+    display: flex;
+    // z-index: 3;
+    // top:1em;
+    // position: absolute;
+    justify-content: center;
+
+}
 .imgSize{
     width : 209px;
     height: 209px;
+}
+.imgSizeshow{
+    width : 180px;
+    height: 180px;
+    transform: scale(1.3);
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    // transition: 1s;
+    
+
 }
 .productname{
     display: flex;
@@ -152,16 +171,32 @@
 }
 
 .hoverbutton{
-    visibility: hidden;
+    // visibility: hidden;
     // margin: 0 auto;
     // overflow: hidden;
     // display: none;
-    background-color: yellowgreen;
+    visibility: visible;
+    z-index: 3;
+    top:11em;
+    // background-color: yellowgreen;
+    // margin-top: 10px;
 }
 .imgFolder:hover .hoverbutton{ 
     // display:block;
     visibility: visible;
     background-color: yellowgreen;
-
-    
-    }
+}
+.row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color:yellowgreen;
+    width: 20px;
+    height: 20px;
+}
+.buttoncolor{
+    background-color: #94a2f0;
+    // width: 10px;
+    // height: 10px;
+    // padding : 5px;
+}
