[GowriK] Refactor : Added the product details component

--- a/src/components/ProductList/productList.less
+++ b/src/components/ProductList/productList.less
@@ -32,7 +32,7 @@
     max-width: 100%;
 }
 .pathlist{
-    width: 310px;
+    width: 300px;
     border-radius: 50px;
     background-color: #b8c0e2;
     // margin-left: 150px;
@@ -95,6 +95,8 @@
     flex-direction: column;
     width: 90%;
     background-color: white;
+    border-radius: 3px;
+
 }
 .collist{
     // max-width: 25%;
