--- a/src/components/ProductDetails/productDetails.less
+++ b/src/components/ProductDetails/productDetails.less
@@ -1,4 +1,4 @@
-.rowP{
+.rowdetails{
     margin-top: 64px;
     display:flex;
     flex-direction: row;
@@ -11,34 +11,34 @@
     flex-wrap: wrap;
     
 }
-.productSizeP{
+.productSizedetails{
     height: 67px;
     display: flex;
     align-items: flex-start;
     width: 100%;
 }
-.productColorP{
+.productColordetails{
     font-family:lato;
     font-size: 23px;
     color : white
 }
-.productWelcomeP{
+.productWelcomedetails{
     font-family: lato,monospace;
     font-size: 14px;
     color : white
 
 }
-.productNameP{
-    min-width: 770px;
+.productNamedetails{
+    min-width: 760px;
     max-width: 100%;
 }
-.pathP{
-    width: 300px;
+.pathdetails{
+    width: 330px;
     border-radius: 50px;
     background-color: #b8c0e2;
     // margin-left: 150px;
 }
-.homeIcon1P{
+.homeIcon1details{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,7 +48,7 @@
     padding: 5px;
     // width: 350px;
     height: 46px;
-    margin-left: 12px;
+    margin-left: 10px;
 }
 .oreo1{
     font-family: "Montserrat",sans-serif;   
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: row;
 }
-.iconHomeColorP{
+.iconHomeColordetails{
     color:white;
     margin-right: 5px ;
 }
@@ -78,7 +78,7 @@
 
     // color: #888;
 }
-.containerFluid{
+.containerFluiddetails{
     width: 82%;
     display: flex;
     // flex-wrap:wrap ;
@@ -88,19 +88,27 @@
     position: absolute;
     // background-color: orange;
 }
-.rowFlex{
+.rowFlexdetails{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
 }
-.col{
+.columnWise{
+    display: flex;
+    flex-direction: column;
+}
+.bigimg{
+    width:316px;
+    height: 344px;
+}
+.coldetails{
     // max-width: 25%;
     // position: relative;
     display : flex;
     // flex-direction: row;
     // flex-wrap: wrap;
-    // width: 100%;
+    width: 100%;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 20px;
@@ -109,101 +117,15 @@
     // background-color: red;
     
 }
-.productItem{
+.productItemdetails{
     background-color: white;
-    width: 249px;
+    // width: 249px;
     box-shadow: none;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding:10px;
     
 }
-.body{
-    color: #424242;
-    font-weight: 400;
-    // padding: 20px;
-    font-size: 14px;
-}
-.imgFolder{
-    // width : 239px;
-    // height: 239px;
-    padding : 5px;
-    display: flex;
-    justify-content: center;
-}
-.imgFoldershow{
-    padding : 5px;
-    display: flex;
-    // z-index: 3;
-    // top:1em;
-    // position: absolute;
-    justify-content: center;
-
-}
-.imgSize{
-    width : 209px;
-    height: 209px;
-}
-.imgSizeshow{
-    width : 180px;
-    height: 180px;
-    transform: scale(1.3);
-
-    // z-index: 3;
-    // top:-1em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // transition: 1s;
-    
-
-}
-.productname{
-    display: flex;
-    justify-content: center;
-}
-.columnProduct{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
-.rowProduct{
+.roworder{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    
-}
-.firstcontainer{
-    display: flex;
-    // width : 100%;
-    // background-color: yellow;
-}
-
-.hoverbutton{
-    // visibility: hidden;
-    // margin: 0 auto;
-    // overflow: hidden;
-    // display: none;
-    visibility: visible;
-    z-index: 3;
-    top:11em;
-    // background-color: yellowgreen;
-    // margin-top: 10px;
-}
-.imgFolder:hover .hoverbutton{ 
-    // display:block;
-    visibility: visible;
-    background-color: yellowgreen;
-}
-.row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // background-color:yellowgreen;
-    width: 20px;
-    height: 20px;
-}
-.buttoncolor{
-    background-color: #94a2f0;
-    // width: 10px;
-    // height: 10px;
-    // padding : 5px;
 }
