[GowriK] REfactor : Implement the redux and chart js

--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -1,4 +1,4 @@
-.rowP{
+.rowchart{
     margin-top: 64px;
     display:flex;
     flex-direction: row;
@@ -7,37 +7,37 @@
     height: 150px;
     padding: 20px;
     justify-content: space-between;
-    width: 100%;
+    // width: 100%;
     flex-wrap: wrap;
 }
-.productSizeP{
+.productSizechart{
     height: 67px;
     display: flex;
     align-items: flex-start;
     width: 100%;
 }
-.productColorP{
+.productColorchart{
     font-family:lato;
     font-size: 23px;
     color : white
 }
-.productWelcomeP{
+.productWelcomechart{
     font-family: lato,monospace;
     font-size: 14px;
     color : white
 
 }
-.productNameP{
+.productNamechart{
     min-width: 770px;
     max-width: 100%;
 }
-.pathP{
+.pathchart{
     width: 300px;
     border-radius: 50px;
     background-color: #b8c0e2;
     // margin-left: 150px;
 }
-.homeIcon1P{
+.homeIcon1chart{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,18 +49,18 @@
     height: 46px;
     margin-left: 12px;
 }
-.oreo1{
+.oreo1chart{
     font-family: "Montserrat",sans-serif;   
     color : white;
     width: 100%;
     display: flex;
     flex-direction: row;
 }
-.iconHomeColorP{
+.iconHomeColorchart{
     color:white;
     margin-right: 5px ;
 }
-.wordStyle{
+.wordStylechart{
     color: #888;
     margin-left: 7px;
     font-size: 17px;
@@ -68,7 +68,7 @@
 
 
 }
-.wordStyle1{
+.wordStyle1chart{
     margin-left: 5px;
     font-size: 17px;
     margin-left: 7px;
@@ -77,7 +77,7 @@
 
     // color: #888;
 }
-.containerFluid{
+.containerFluidchart{
     width: 82%;
     display: flex;
     flex-wrap:wrap ;
@@ -88,25 +88,26 @@
     justify-content: center;
     // background-color: orange;
 }
-.rowFlex{
+.rowFlexchart{
     display: flex;
     // flex-wrap: wrap;
     // flex-direction: row;
     width: 100%;
     justify-content: center;
 }
-.rowFlex1{
+.rowFlex1chart{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    background-color: white;
     // width: 100%;
     // justify-content: center;
 }
-.col{
+.colchart{
     // max-width: 25%;
     // position: relative;
     display : flex;
-    // flex-direction: row;
+    flex-direction: column;
     // flex-wrap: wrap;
     // width: 100%;
     padding-left: 10px;
@@ -116,21 +117,21 @@
     // background-color: red;
     
 }
-.productItem{
+.productItemchart{
     background-color: white;
-    width: 249px;
-    height : 300px;
+    // width: 249px;
+    box-shadow: none;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding:10px;
     
 }
-.body{
+.bodychart{
     color: #424242;
     font-weight: 400;
     // padding: 20px;
     font-size: 14px;
 }
-.imgFolder{
+.imgFolderchart{
     // width : 239px;
     // height: 239px;
     padding : 5px;
@@ -139,7 +140,7 @@
     position: relative;
     justify-content: center;
 }
-.imgFoldershow{
+.imgFoldershowchart{
     padding : 5px;
     display: flex;
     z-index: 5;
@@ -148,11 +149,11 @@
     justify-content: center;
 
 }
-.imgSize{
+.imgSizechart{
     width : 209px;
     height: 209px;
 }
-.imgSizeshow{
+.imgSizeshowchart{
     width : 170px;
     height: 170px;
     transform: scale(1.3);
@@ -164,34 +165,29 @@
     
 
 }
-.productname{
+.productnamechart{
     display: flex;
     justify-content: center;
-    font-size: 16px;
-    font-weight: 540;
-    font-family: "Montserrat",sans-serif,monospace;   
-
-
 }
-.columnProduct{
+.columnProductchart{
     display: flex;
     flex-direction: column;
     justify-content: center;
 
 }
-.rowProduct{
+.rowProductchart{
     display: flex;
     flex-direction: row;
     justify-content: center;
     
 }
-.firstcontainer{
+.firstcontainerchart{
     display: flex;
-    // width : 100%;
+    width : 100%;
     // background-color: yellow;
 }
 
-.hoverbutton{
+.hoverbuttonchart{
     // visibility: hidden;
     // margin: 0 auto;
     // overflow: hidden;
@@ -204,11 +200,10 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: 30px;
-    padding: 5px;
     // background-color: yellowgreen;
     // margin-top: 10px;
 }
-.hoverbutton1{
+.hoverbutton1chart{
     // visibility: hidden;
     // margin: 0 auto;
     // overflow: hidden;
@@ -228,116 +223,52 @@
     visibility: visible;
     background-color: yellowgreen;
 }
-.row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // background-color:yellowgreen;
-    width: 20px;
-    height: 20px;
-}
-.buttoncolor{
+// .rowchart{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     // background-color:yellowgreen;
+//     width: 20px;
+//     height: 20px;
+//     // margin-top: 64px;
+// }
+.buttoncolorchart{
     background-color: #94a2f0;
-    margin-right: 15px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 40px;
-    border-radius: 3px;
-    // margin-top: 7px;
+    // width: 10px;
     // height: 10px;
     // padding : 5px;
 }
 
 
 
+.rowTopchart{
+    display: flex;
+    // width: 80%;
+    flex-direction: row;
+}
+.rowTopchart11{
+    display: flex;
+    // width: 80%;
+    flex-direction: row;
+    margin-left: 10px;
+}
+.productstyle{
+    color: #94a2f0;
+    font-size: 15px;
+    font-family: "Montserrat",sans-serif,monospace;   
 
+    
+}
+.reportstyle{
+    color: #424242;
+    margin-left: 10px;
+    font-size: 15px;
+    font-family: "Montserrat",sans-serif,monospace;   
 
-
-
-// /* Extra small devices (phones, 600px and down) */
-// @media only screen and (max-width: 600px) {
-//     // .example {background: red;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: red;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
-  
-//   /* Small devices (portrait tablets and large phones, 600px and up) */
-//   @media only screen and (min-width: 600px) {
-//     .example {background: green;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: green;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
-  
-//   /* Medium devices (landscape tablets, 768px and up) */
-//   @media only screen and (min-width: 768px) {
-//     .example {background: blue;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: blue;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   } 
-  
-//   /* Large devices (laptops/desktops, 992px and up) */
-//   @media only screen and (min-width: 992px) {
-//     .example {background: orange;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: orange;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   } 
-  
-//   /* Extra large devices (large laptops and desktops, 1200px and up) */
-//   @media only screen and (min-width: 1200px) {
-//     .example {background: pink;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: pink;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
-
-  
+}
+.rowTopchart1{
+    display: flex;
+    // width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+}
