--- a/src/components/ProductDetails/productDetails.less
+++ b/src/components/ProductDetails/productDetails.less
@@ -100,7 +100,7 @@
 }
 .bigimg{
     width:316px;
-    height: 344px;
+    height: 316px;
 }
 .coldetails{
     // max-width: 25%;
@@ -128,4 +128,65 @@
 .roworder{
     display: flex;
     flex-direction: row;
+
+}
+.h3Style{
+    font-size: 28px;
+    height: 39px;
+    font-style: bold;
+    font-weight: 600;
+}
+.clockrow{
+    display: flex;
+    flex-direction: row;
+}
+.h3Stylecolor{
+    font-size: 28px;
+    color: yellow ;
+    font-style: bold;
+    font-weight: 600;
+
+
+}
+.para1style{
+    font-size: 15px;
+    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // background-attachment: red;
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: 400;
+
+
+}
+.rowSide{
+    display: flex;
+    margin-left: 10px;
+    flex-direction: column;
+}
+.smallimssize{
+    width: 58px;
+    height: 58px;
+}
+.rowImage{
+    display: flex;
+    flex-direction: row;
+}
+.h3Style21{
+    font-size: 28px;
+    height: 39px;
+    font-style: bold;
+    font-weight: 600;
+    padding-left: 20px;   
+}
+.h3Style2{
+    font-size: 28px;
+    height: 39px;
+    font-style: bold;
+    font-weight: 600;
+    padding-left: 10px;   
+}
+.container2{
+    width: 100%;
+    height : 76px;
+    background-color: white;
 }
