[GowriK] Refactor : Added the bar chart,pie chart,doughnut chart in dashboard component

--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -19,7 +19,7 @@
 .productColorchart{
     font-family:lato;
     font-size: 23px;
-    color : white
+    color : rgb(255, 255, 255)
 }
 .productWelcomechart{
     font-family: lato,monospace;
@@ -86,21 +86,50 @@
     top:11em;
     position: absolute;
     justify-content: center;
+    flex-direction: column;
+   
     // background-color: orange;
 }
 .rowFlexchart{
     display: flex;
     // flex-wrap: wrap;
-    // flex-direction: row;
+    margin-top: 20px;
     width: 100%;
     justify-content: center;
+    height: 600px;
+   
+}
+.rowFlexchart11{
+    display: flex;
+    // flex-wrap: wrap;
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+    // height: 700px;
+   
 }
 .rowFlex1chart{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     background-color: white;
+    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
     // width: 100%;
+    // justify-content: center;
+}
+.rowFlex1chart22{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color:white;
+    // padding: 20px;
+    margin-left: 20px;
+    height: 208px;
+    width: 339px;
+    opacity: 0.9;
+    border: 1px white solid;
+    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+
     // justify-content: center;
 }
 .colchart{
@@ -271,4 +300,75 @@
     // width: 80%;
     flex-direction: row;
     justify-content: space-between;
+}
+.colD{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10px;
+}
+.boxD{
+    width: 50px;
+    height: 50px;
+    background-color: #eceeef;
+}
+.rowD{
+    display: flex;
+    flex-direction: row;
+    width: 346px;
+    padding : 5px;
+}
+.RowWiswD{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.amountD{
+    display: flex;
+    font-size: 20px;
+    margin-top: 10px;
+    align-items: center;
+    font-weight: 600;
+
+}
+.amountStyle{
+    font-size: 25px;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.rowTopchart12{
+    display: flex;
+    // width: 80%;
+    flex-direction: row;
+    // justify-content: space-between;
+}
+.insidechartbody{
+    width: 680px;
+    // margin-left: 10px;
+}
+.rowFlex1chart23{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color:white;
+    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+
+    // padding: 20px;
+    margin-left: 20px;
+    // height: 208px;
+    // width: 339px;
+    // justify-content: center;
+}
+.circlechart{
+    width:319px;
+    // display: flex;
+    // justify-content: center;
+}
+.satification{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
