--- a/src/components/HeaderPage/headerPage.less
+++ b/src/components/HeaderPage/headerPage.less
@@ -205,6 +205,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 10px;
     // justify-content: space-between;
 }
 .alignmentshow1{
@@ -246,8 +247,14 @@
     font-size: 14px;
 }
 .para{
+    display: flex;
+    font-size: 14px;
+
     font-weight: 400;
     color : #888;
+    justify-content: center;
+    margin-left: 20px;
+    margin-top: 10px;
  
 
 
