--- a/src/components/Product/product.less
+++ b/src/components/Product/product.less
@@ -78,10 +78,11 @@
     // color: #888;
 }
 .containerFluid{
-    width: 82%;
+    // width: 82%;
     display: flex;
     flex-wrap:wrap ;
     // padding: 15px;
+    justify-content: center;
     z-index: 3;
     top:11em;
     position: absolute;
@@ -255,89 +256,110 @@
 
 
 
-// /* Extra small devices (phones, 600px and down) */
-// @media only screen and (max-width: 600px) {
-//     // .example {background: red;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: red;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    // .example {background: red;}
+    .rowP{
+        margin-top: 64px;
+        display:flex;
+        flex-direction: row;
+        // align-items: center;
+        // background-color: red;
+        height: 150px;
+        padding: 20px;
+        justify-content: space-between;
+        // width: 100%;
+        flex-wrap: wrap;
+    }
+  }
   
-//   /* Small devices (portrait tablets and large phones, 600px and up) */
-//   @media only screen and (min-width: 600px) {
-//     .example {background: green;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: green;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .example {background: green;}
+    .rowP{
+        margin-top: 64px;
+        display:flex;
+        flex-direction: row;
+        // align-items: center;
+        // background-color: green;
+        height: 150px;
+        padding: 20px;
+        justify-content: space-between;
+        // width: 100%;
+        flex-wrap: wrap;
+    }
+  }
   
-//   /* Medium devices (landscape tablets, 768px and up) */
-//   @media only screen and (min-width: 768px) {
-//     .example {background: blue;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: blue;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   } 
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .example {background: blue;}
+    .productItem{
+        background-color: white;
+        width: 450px;
+        height : 300px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        padding:8px;
+        
+    }
+  } 
   
-//   /* Large devices (laptops/desktops, 992px and up) */
-//   @media only screen and (min-width: 992px) {
-//     .example {background: orange;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: orange;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         // width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   } 
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .example {background: orange;}
+    .productItem{
+        background-color: white;
+        width: 345px;
+        height : 300px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        padding:8px;
+        
+    }
+    .imgSize{
+        width : 209px;
+        height: 209px;
+    }
+    .imgSizeshow{
+        width : 170px;
+        height: 170px;
+        transform: scale(1.3);
+    
+        // z-index: 3;
+        // top:-1em;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        // transition: 1s;
+        
+    
+    }
+   
+  } 
   
-//   /* Extra large devices (large laptops and desktops, 1200px and up) */
-//   @media only screen and (min-width: 1200px) {
-//     .example {background: pink;}
-//     .rowP{
-//         margin-top: 64px;
-//         display:flex;
-//         flex-direction: row;
-//         // align-items: center;
-//         background-color: pink;
-//         height: 150px;
-//         padding: 20px;
-//         justify-content: space-between;
-//         width: 100%;
-//         flex-wrap: wrap;
-//     }
-//   }
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    .example {background: pink;}
+    .productItem{
+        background-color: white;
+        width: 249px;
+        height : 300px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        padding:10px;
+        
+    }
+    .imgSize{
+    width : 209px;
+    height: 209px;
+}
+.imgSizeshow{
+    width : 170px;
+    height: 170px;
+    transform: scale(1.3);
+
+    // z-index: 3;
+    // top:-1em;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    // transition: 1s;
+    
+
+}
+  }
 
   
