[GowriK] Refactor : Used the linear gradient and animation and finished the profile

--- a/src/components/Dashboard/dashboard.less
+++ b/src/components/Dashboard/dashboard.less
@@ -9,7 +9,7 @@
     color : #888
 }
 .oreo{
-    font-family: "Montserrat",sans-serif;   
+    // font-family: "Montserrat",sans-serif;   
     color : #888
 }
 .homeIcon{
@@ -46,13 +46,13 @@
     font-size: 11px;
     font-weight: 700;
     color: #455a64;
-    font-family: Montserrat, Arial, Tahoma, sans-serif;
+    // font-family: Montserrat, Arial, Tahoma, sans-serif;
 }
 .content{
     font-size: 11px;
     font-weight: 700;
     color: #455a64;
-    font-family: Montserrat,sans-serif;
+    // font-family: Montserrat,sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,19 +68,19 @@
 
     color: #6572b8;
     cursor: pointer;
-    font-family: lato;
+    // font-family: lato;
 }
 .ecommerce1{
     font-size: 15px;
     color: #455a64;
     font-weight: 400;
     cursor: pointer;
-    font-family: lato;
+    // font-family: lato;
 }
 .heading{
     font-size: 16px;
     color: #6572b8  ;
-    font-family: Montserrat, Arial, Tahoma, sans-serif;
+    // font-family: Montserrat, Arial, Tahoma, sans-serif;
 
 }
 .rowWise{
@@ -159,7 +159,7 @@
     // width: 220px;
     color: #424242;
     padding: 5px;
-    font-family: "Montserrat",sans-serif;
+    // font-family: "Montserrat",sans-serif;
     // background-color: brown;
 }
 .blackColor{
