--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -87,6 +87,7 @@
     position: absolute;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 20px;
    
     // background-color: orange;
 }
@@ -106,6 +107,9 @@
     width: 100%;
     justify-content: center;
     // height: 700px;
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+
    
 }
 .rowFlex1chart{
@@ -113,7 +117,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     // width: 100%;
     // justify-content: center;
 }
@@ -128,7 +132,9 @@
     width: 339px;
     opacity: 0.9;
     border: 1px white solid;
-    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
 
     // justify-content: center;
 }
@@ -353,7 +359,9 @@
     flex-wrap: wrap;
     flex-direction: row;
     background-color:white;
-    box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
     // padding: 20px;
     margin-left: 20px;
@@ -367,6 +375,105 @@
     // justify-content: center;
 }
 .satification{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.alignment{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.cardImgsize{
+    width: 60px;
+    height: 60px;
+    border-radius: 2px;
+}
+.alignment1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.textproperty{
+    // display: flex;
+    text-overflow: clip;
+    width:"540px";
+    overflow: hidden;
+    // background-color: yellow;
+}
+.gradient{
+    display: flex;
+    justify-content: center;
+    width:335px;
+    height: 150px;
+    background: linear-gradient(45deg, #a890d3, #edbae7)
+}
+.widthvalue{
+   width: 1035px ;
+}
+.profile{
+    width:150px;
+    height:150px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    box-shadow: 0px 5px 25px 0px rgba(0,0,0,0.2);
+    margin-top: 25%;
+
+}
+.facebookiconImg{
+    width: 28px;
+    height: 28px;
+    // color: orangered;
+    // filter: opacity(0.9) drop-shadow(0 0 0 orangered);
+    // -webkit-filter: invert(100%);
+    // background-color: orangered;
+}
+.instaiconImg{
+    width: 28px;
+    height: 28px;
+    // color: orangered;
+    // padding: 5px;
+    // filter: invert(100%);
+    // background-color: orangered;
+}
+.twittericonImg{
+    width: 28px;
+    height: 28px;
+    // color: orangered;
+    // filter: invert(100%);
+    // background-color: orangered;
+}
+.iconImagerow{
+    // width: 150px;
+    margin-top: 30%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    
+}
+.rowTopchart123{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 335px;
+}
+.centerpara{
+    display: flex;
+    justify-content: center;
+    // flex-direction: column;
+    font-size: 15px;
+    color: #888;
+    margin-bottom: 5px;
+}
+.lastrow{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    color:rgb(85, 83, 83);
+
+}
+.columnflex{
     display: flex;
     justify-content: center;
     flex-direction: column;
