--- a/src/components/Product/product.less
+++ b/src/components/Product/product.less
@@ -17,25 +17,28 @@
     width: 100%;
 }
 .productColorP{
-    font-family:lato;
+    // font-family:lato;
     font-size: 23px;
     color : white
 }
 .productWelcomeP{
-    font-family: lato,monospace;
+    // font-family: lato,monospace;
     font-size: 14px;
     color : white
 
 }
 .productNameP{
-    min-width: 770px;
+    min-width: 619px;
     max-width: 100%;
 }
 .pathP{
-    width: 300px;
-    border-radius: 50px;
-    background-color: #b8c0e2;
+    min-width: 450px;
+    // max-width: 450px;
+    // border-radius: 50px;
+    // background-color: #b8c0e2;
     // margin-left: 150px;
+    display: flex;
+    justify-content: flex-end;
 }
 .homeIcon1P{
     display: flex;
@@ -43,15 +46,19 @@
     align-items: center;
     flex-direction: row;
     // border: 1px solid #aab3e7;
+    background-color: #b8c0e2;
     border-radius: 30px;
     padding: 5px;
-    // width: 350px;
+    min-width: 300px;
+    max-width: 350px;
     height: 46px;
     margin-left: 12px;
 }
 .oreo1{
-    font-family: "Montserrat",sans-serif;   
+    // font-family: "Montserrat",sans-serif;   
     color : white;
+    // min-width: 300px;
+    // max-width: 320px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -64,7 +71,7 @@
     color: #888;
     margin-left: 7px;
     font-size: 17px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family:lato;   
 
 
 }
@@ -72,7 +79,7 @@
     margin-left: 5px;
     font-size: 17px;
     margin-left: 7px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: lato;   
 
 
     // color: #888;
@@ -170,7 +177,7 @@
     justify-content: center;
     font-size: 16px;
     font-weight: 540;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
 }
