--- a/src/components/ProductList/productList.less
+++ b/src/components/ProductList/productList.less
@@ -17,12 +17,12 @@
     width: 100%;
 }
 .productColorlist{
-    font-family:lato;
+    // font-family:lato;
     font-size: 23px;
     color : white
 }
 .productWelcomelist{
-    font-family: lato,monospace;
+    // font-family: lato,monospace;
     font-size: 14px;
     color : white
 
@@ -50,7 +50,7 @@
     margin-left: 12px;
 }
 .oreo1{
-    font-family: "Montserrat",sans-serif;   
+    // font-family: "Montserrat",sans-serif;   
     color : white;
     width: 100%;
     display: flex;
@@ -64,7 +64,7 @@
     color: #888;
     margin-left: 7px;
     font-size: 17px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
 }
@@ -86,8 +86,10 @@
     top:11em;
     position: absolute;
     justify-content: center;
-
+    margin-bottom: 20px;
     // background-color: orange;
+    // flex-direction: column;
+
 }
 .rowFlexlist{
     display: flex;
@@ -96,6 +98,8 @@
     width: 90%;
     background-color: white;
     border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
 .collist{
@@ -217,14 +221,14 @@
     width: 72px;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
 .ProductlistNamehead{
     display: flex;
     align-items: center;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
     
 }
 .detailshead{
@@ -234,13 +238,13 @@
     flex-wrap: wrap;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
 .ProductlistNamehead{
     width: 160px;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
 .amounthead{
     width: 85px;
@@ -248,7 +252,7 @@
     align-items: center;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
 .stockhead{
     width: 105px;
@@ -256,7 +260,7 @@
     align-items: center;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
 .Actionhead{
     display: flex;
@@ -265,5 +269,5 @@
     width:110px;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
 }
