--- a/src/components/DashboardHome/dashboardHome.less
+++ b/src/components/DashboardHome/dashboardHome.less
@@ -15,12 +15,12 @@
     align-items: flex-start;
 }
 .productColor{
-    font-family:lato;
+    // font-family:lato;
     font-size: 23px;
     color : white
 }
 .productWelcome{
-    font-family: lato,monospace;
+    // font-family: lato,monospace;
     font-size: 14px;
     color : white
 
@@ -47,7 +47,7 @@
     margin-left: 12px;
 }
 .oreo1{
-    font-family: "Montserrat",sans-serif;   
+    // font-family: "Montserrat",sans-serif;   
     color : white;
     width: 100%;
     display: flex;
@@ -61,7 +61,7 @@
     color: #888;
     margin-left: 7px;
     font-size: 17px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
 }
@@ -69,7 +69,7 @@
     margin-left: 5px;
     font-size: 17px;
     margin-left: 7px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
     // color: #888;
