--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,4 @@
-body {
-    background-color:#8c99e0;
-    font-family: "Montserrat",sans-serif;
+* {
+    // background-color:#8c99e0;
+    font-family: Arial, Helvetica, sans-serif;
 }
