[GowriK] Refactor : Implement the mixins less,Design is chsnged

--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -17,12 +17,12 @@
     width: 100%;
 }
 .productColorchart{
-    font-family:lato;
+    // font-family:lato;
     font-size: 23px;
     color : rgb(255, 255, 255)
 }
 .productWelcomechart{
-    font-family: lato,monospace;
+    // font-family: lato,monospace;
     font-size: 14px;
     color : white
 
@@ -50,7 +50,7 @@
     margin-left: 12px;
 }
 .oreo1chart{
-    font-family: "Montserrat",sans-serif;   
+    // font-family: "Montserrat",sans-serif;   
     color : white;
     width: 100%;
     display: flex;
@@ -64,7 +64,7 @@
     color: #888;
     margin-left: 7px;
     font-size: 17px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
 }
@@ -72,7 +72,7 @@
     margin-left: 5px;
     font-size: 17px;
     margin-left: 7px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 
     // color: #888;
@@ -290,7 +290,7 @@
 .productstyle{
     color: #94a2f0;
     font-size: 15px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
     
 }
@@ -298,7 +298,7 @@
     color: #424242;
     margin-left: 10px;
     font-size: 15px;
-    font-family: "Montserrat",sans-serif,monospace;   
+    // font-family: "Montserrat",sans-serif,monospace;   
 
 }
 .rowTopchart1{
@@ -359,15 +359,9 @@
     flex-wrap: wrap;
     flex-direction: row;
     background-color:white;
-    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
-    // padding: 20px;
     margin-left: 20px;
-    // height: 208px;
-    // width: 339px;
-    // justify-content: center;
+    
 }
 .circlechart{
     width:319px;
@@ -478,4 +472,33 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+}
+.rowImage{
+    display: flex;
+    flex-direction: row;
+}
+.rowImage1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.rowImage2{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+.mapSize{
+    height: 400px;
+    width: 650px;
+    margin-top: 10px;
+    border-radius: 3px;
+}
+.rowFlex{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color:white;
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    // margin-left: 20px;
+    
 }
