--- a/src/components/ProductDetails/productDetails.less
+++ b/src/components/ProductDetails/productDetails.less
@@ -106,7 +106,7 @@
     // max-width: 25%;
     // position: relative;
     display : flex;
-    // flex-direction: row;
+    flex-direction: column;
     // flex-wrap: wrap;
     width: 100%;
     padding-left: 10px;
@@ -125,6 +125,15 @@
     padding:10px;
     
 }
+.productItemdetails1{
+    background-color: white;
+    // width: 249px;
+    box-shadow: none;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    // padding:10px;
+    margin-top: 20px;
+    
+}
 .roworder{
     display: flex;
     flex-direction: row;
@@ -139,6 +148,7 @@
 .clockrow{
     display: flex;
     flex-direction: row;
+    margin-bottom: 10px;
 }
 .h3Stylecolor{
     font-size: 28px;
@@ -163,6 +173,7 @@
     display: flex;
     margin-left: 10px;
     flex-direction: column;
+    width: 100%;
 }
 .smallimssize{
     width: 58px;
@@ -172,12 +183,22 @@
     display: flex;
     flex-direction: row;
 }
+.rowImage1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.rowImage2{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
 .h3Style21{
     font-size: 28px;
     height: 39px;
     font-style: bold;
     font-weight: 600;
-    padding-left: 20px;   
+    margin-left: 20px;   
 }
 .h3Style2{
     font-size: 28px;
@@ -190,4 +211,74 @@
     width: 100%;
     height : 76px;
     background-color: white;
+}
+.card2style{
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+    width:134px;
+    height: 47px;
+    margin: 10px;
+    // border: 1px solid #6572b8;
+    // border-radius: 30px;
+    // padding: 20px;
+    .broder()
+}
+.cart{
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width:130px;
+    // min-width : 50px;
+    height: 40px;
+    margin: 10px;
+    // border: 1px solid #6572b8;
+    // border-radius: 30px;
+    // padding: 20px;
+    background-color: #6f42c1;
+    .broder()
+}
+.broder{
+    border: 1px solid #6572b8;
+    border-radius: 30px;
+}
+.description{
+    margin: 10px;
+    color: #888;
+    font-size: 15px;
+}
+.about{
+    margin: 10px;
+    // color: #888;
+    font-size: 15px;
+}
+.about1{
+    // margin: 10px;
+    color: #888;
+    font-size: 15px;
+}
+.color{
+    // margin-top: 10px;
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
+    background-color: yellow;
+}
+.color1{
+    .color();
+    background-color: greenyellow;
+}
+.color2{
+    .color();
+    background-color: lightskyblue;
+}
+.rating{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
 }
